# critic

./: Cargo.toml  LICENSE  README.md  vg_seed.sql
critic/: Cargo.toml
critic-term/: Cargo.toml
critic-term/src/: main.rs
critic-term/src/app/: group.rs  mod.rs  rate.rs  title_tab.rs  top_tab.rs  welcome.rs
critic/src/: lib.rs  seed.rs
critic/src/critic_sqlite/: add_contest_result.sql  all_groups.sql  connection.rs  create.sql  criterion.rs  critic_data.rs  find_criteria.sql  group_criteria.rs  ins_criterion.sql  ins_entry.sql  ins_entry_criterion.sql  ins_entry_criterion_default.sql  ins_group_criteria.sql  match_result.rs  mod.rs  new_criterion_item.rs  next_contest.sql  seed.sql  title.rs  update_elo.sql
critic/src/critic_sqlite/procedures/: add_contest_result.sql  add_group_to_all.sql  all_groups.sql  all_titles.sql  create.sql  create_title.sql  create_title_criteria.sql  create_title_criteria_by_name.sql  delete_criterion.sql  delete_group_criteria.sql  delete_title.sql  delete_title_criteria.sql  find_criteria.sql  find_groups_by_title.sql  find_titles_by_group.sql  ins_criterion.sql  mod.rs  next_contest.sql  top_criteria.sql  update_criterion.sql  update_elo.sql  update_group_criteria.sql  update_title.sql
critic/src/dto/: category.rs  category_item.rs  contest.rs  criteria_group.rs  criterion.rs  match_result.rs  mod.rs  title.rs  top_row.rs
critic/src/elo/: mod.rs
