[package]
name = "critic-term"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
color-eyre = "0.6.3"
critic = { version = "0.1.0", path = "../critic", features = ["rusqlite"] }
crossterm = "0.28.1"
ratatui = { version = "0.29.0", features = ["serde"] }
tui-input = "0.11.1"
